<?xml version="1.0"?>
<package format="2">.
  <name>coros_msgs</name>
  <version>1.0.0</version>
  <description>Calibration On ROS Messages</description>

  <maintainer email="jiangxinauto@163.com">Jiang Xin</maintainer>
  <author email="jiangxinauto@163.com">Jiang Xin</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/can_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
